--- a/src/app.css
+++ b/src/app.css
@@ -11,9 +11,10 @@
 }
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  background-color: rgb(202, 138, 1,1);
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(255, 255, 255, 0.90);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
